--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ mybatis.mapperLocations=classpath:mapping/*.xml
 spring.datasource.name=dianpingdb
 spring.datasource.url=jdbc:mysql://172.16.208.168:3307/dianpingdb?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 
 #使用druid做链接池管理
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
@@ -25,6 +25,6 @@ spring.thymeleaf.suffix=.html
 
 
 #admin官方账号的用户名和密码
-admin.email=admin@imooc.com
+admin.email=test
 admin.encryptPassword=4QrcOUm6Wau+VuBX8g+IPg==
 
