--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ mybatis.mapperLocations=classpath:mapping/*.xml
 
 #配置数据库链接等数据源
 spring.datasource.name=dianpingdb
-spring.datasource.url=jdbc:mysql://172.16.208.168:3307/dianpingdb?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/dianpingdb?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=123456
 
@@ -27,4 +27,6 @@ spring.thymeleaf.suffix=.html
 #admin官方账号的用户名和密码
 admin.email=test
 admin.encryptPassword=4QrcOUm6Wau+VuBX8g+IPg==
+
+logging.config=classpath:logback.xml
 
